tree-sitter-haruspex/test/corpus/records.txt
===
Simple record declaration
===

record Point
  : x : Int
  , y : Int

---

(source_file
  (record_declaration
    name: (type_identifier)
    (field_declaration
      name: (identifier)
      type: (type_variable (type_identifier)))
    (field_declaration
      name: (identifier)
      type: (type_variable (type_identifier)))))

===
Record with type parameters
===

record Pair(a : Type, b : Type)
  : fst : a
  , snd : b

---

(source_file
  (record_declaration
    name: (type_identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_universe))
      (parameter
        name: (identifier)
        type: (type_universe)))
    (field_declaration
      name: (identifier)
      type: (variable (identifier)))
    (field_declaration
      name: (identifier)
      type: (variable (identifier)))))
